[package]
name = "buildstructor"
version = "0.5.3"
edition = "2021"
authors = ["Bryn Cooke <bryncooke@gmail.com>"]
license = "Apache-2.0"
description = "Macro to derive a builder from a constructor function."
homepage = "https://github.com/BrynCooke/buildstructor"
repository = "https://github.com/BrynCooke/buildstructor"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "constructor"]

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.25", features = ["full", "extra-traits"] }
thiserror = "1.0.47"
try_match = "0.4.1"
str_inflector = "0.12.0"

[dev-dependencies]
trybuild = "1.0.83"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
insta = "1.31.0"
rust-format = "0.3.4"
http = "0.2.9"
derive_more = "0.99.17"
multimap = "0.9.0"
